--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Youthapp">
+        android:theme="@style/Theme.Youthapp.NoActionBar">
+        <activity
+            android:name=".MainContentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
